--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-Flask
-pyzbar
-Werkzeug
-opencv-python-headless
-
 Flask==2.3.2
-opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
 numpy==1.24.3
 Pillow==9.5.0
+pyzbar==0.1.9
+Werkzeug==2.3.7
+setuptools==65.5.0
